Now runs with lein run